# docs/swagger.json
@@ -110,7 +110,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Delete an existing group",
+                "description": "Delete an existing group and optionally its hosts",
                 "consumes": [
                     "application/json"
                 ],
@@ -128,6 +128,12 @@
                         "name": "name",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Delete associated hosts",
+                        "name": "withHosts",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -631,6 +637,43 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/common.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/me": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Delete your own account (not allowed if last admin)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Delete own account",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/common.ErrorResponse"
                         }
@@ -1153,6 +1196,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "installedComponents": {
+                    "type": "string"
                 },
                 "ipAddress": {
                     "type": "string"
